Showing Modal to moving image

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -325,8 +325,14 @@
             },
             markerElement.position
           );
-          if(clickDist2 > circle.getRadius()/1000) return console.log("Clicked Outside Circle");
-          if(clickDist > circle.getRadius()/1000) return console.log("Your live Location is Outside Circle");
+          if(clickDist2 > circle.getRadius()/1000){
+            InfoModal(polygonCoordinates[polyIndex]._id);
+            return console.log("Clicked Outside Circle");
+          }
+          if(clickDist > circle.getRadius()/1000){
+            InfoModal(polygonCoordinates[polyIndex]._id);
+            return console.log("Your live Location is Outside Circle");
+          }
           console.log(
             `From You: ${clickDist}   From Click: ${clickDist2}  Radii: ${circle.getRadius() / 1000}`
           );
