--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/bs.css" />
     <script src="/js/jquery.js"></script>
   </head>
-  <body style="margin: 0; height: 100vh">
+  <body style="margin: 0">
     <div id="map" style="height: 100vh; width: 100vw"></div>
     <div class="simpleLoading">
       <div class="loadingAnime"></div>
@@ -641,6 +641,7 @@
         $(`img.mapPolyImage#${polygonCoordinates[polyIndex]._id}`).hide();
       }
       function InfoModal(polyid){
+        alert(polyid);
         const tarPolygon = polygonCoordinates.find((d)=>d._id==polyid);
         if(!tarPolygon) return notyf.error("No Information found!");
         $("#map").hide();
