--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -405,7 +405,15 @@
         showAllPolygons();
 
       }
-
+      function markerClickTrack(event) {
+          const tarId = event.target.id;
+          if (!tarId) {
+              return notyf.error("No Information");
+          }
+          InfoModal(tarId);
+          event.preventDefault();
+          return false;
+      }
       function showAllPolygons() {
         $.get(`/api/looproute/${mapParsedId}`, (data, success) => {
           if (!success) return;
@@ -416,12 +424,8 @@
             img.width=10*pl.size;
             img.id=pl._id;
             img.className="mapPolyImage";
-            img.addEventListener("click", function(event){
-              const tarId=event.target.id;
-              if(!tarId) return notyf.error("No Information");
-              InfoModal(tarId);
-              return false;
-            });
+            img.addEventListener("click", markerClickTrack);
+            img.addEventListener("touchstart", markerClickTrack);
             new google.maps.marker.AdvancedMarkerElement({
                 position: pl.polygonCoords[0],
                 content: img,
