Duplicating a Map changing its Name

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -785,7 +785,7 @@
           const myData = data.maps.reverse();
           myData.forEach((d) => {
             $("tbody.map_list").append(
-              `<tr><td>${d.name}</td><td><a target='_blank' href='/map/${d.id}'>View Map</a></td><td><button class='btn btn-info me-1 edit_map' data-id='${d.id}'>Edit</button><button class='me-1 btn btn-danger delete_map' data-id='${d.id}'>delete</button><button class='btn btn-warning setupMissions' data-id='${d.id}'>Missions</button></td></tr>`
+              `<tr><td>${d.name}</td><td><a target='_blank' href='/map/${d.id}'>View Map</a></td><td><button class='btn btn-info me-1 edit_map' data-id='${d.id}'>Edit</button><button class='me-1 btn btn-danger delete_map' data-id='${d.id}'>delete</button><button class='btn btn-warning setupMissions' data-id='${d.id}'>Missions</button><button class='btn btn-info ms-2 setUpDuplicate' data-id='${d.id}'>Duplicate</button></td></tr>`
             );
           });
           $(".delete_map")
@@ -820,6 +820,15 @@
               if (!mapId) return notyf.error("Invalid Map");
               $(".missionsCreator").fadeIn();
               $(".new_map_form").hide();
+            });
+
+          $(".setUpDuplicate")
+            .off("click")
+            .on("click", function () {
+              const name = prompt("New Map Name?");
+              if (!name || !name.trim()) return notyf.error("Invalid Name");
+              const mapId = $(this).data("id");
+              if (!mapId) return notyf.error("Invalid MAP ID!");
             });
         });
       }
