--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -623,6 +623,7 @@
         if (polyIndex != tmpaihjhsg.index) {
           polyIndex = tmpaihjhsg.index;
         }
+        if(polygonCoordinates.length==0) return;
         $(`img.mapPolyImage#${polygonCoordinates[polyIndex]._id}`).hide();
         return tmpaihjhsg;
       }
