--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome - Urban Escape</title>
-    <link rel="stylesheet" href="/css/bs.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <div class="row vh-100 justify-content-center align-items-center m-0">
