--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,10 @@
     />
 
     <title>Login</title>
-    <link rel="stylesheet" href="/css/bs.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <style>
       body {
         background: url(/images/green_bg.jpeg);
