--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -96,11 +96,12 @@
               <h3 class="text-center pb-2 border-bottom">Captured Images</h3>
               <% if (locals.user && user.capturedImages.length>0) { %>
               <div class="image-container row justify-content-center">
-                <% user.capturedImages.forEach(image => { %>
+                <% user.capturedImages.forEach(image => { %> <%
+                image.images.forEach(img=>{%>
                 <div class="image-unit col-6 col-sm-4 col-lg-3">
-                  <img src="/images/mapicons/<%= image %>" width="100%" />
+                  <img src="/static/image/<%= img %>" width="100%" />
                 </div>
-                <% }) %>
+                <%}) %> <% }) %>
               </div>
               <% }else{ %>
               <div class="text-center alert alert-success opacity-50">
