--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -158,7 +158,7 @@
         </div>
       </div>
     </div>
-    <script src="/js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script>
       let isLoginITF = 1;
       function toggleForm() {
