Toglle b/w new and Update

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -302,6 +302,7 @@
                     max="100"
                     value="100"
                     class="form-control"
+                    id="loopOpacity"
                     oninput="setCircleOpacity(this)"
                   />
                 </div>
@@ -313,6 +314,7 @@
                     value="1"
                     oninput="setMarkerSpeed(this)"
                     max="10"
+                    id="imageSpeed"
                     class="form-control"
                   />
                 </div>
