Fixed Bugs of Near Marker hide

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -141,6 +141,7 @@
               class="img-thumbnail infoBoxMarkimage my-2"
               src=""
               loading="lazy"
+              width="100%"
             />
             <p class="alert alert-info" style="text-transform: capitalize">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
