--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -135,7 +135,10 @@
     >
       <div class="row justify-content-center align-items-center vh-100">
         <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-4">
-          <div class="body text-center bg-white border-1 rounded-2 p-2">
+          <div
+            class="body text-center bg-white border-1 rounded-2 p-2"
+            style="max-height: 90vh; overflow-y: scroll"
+          >
             <h3 class="infoTitle pb-2 border-bottom">AJAY</h3>
             <img
               class="img-thumbnail infoBoxMarkimage my-2"
