Added return link to Home

--- a/views/pages/privacy_policy.ejs
+++ b/views/pages/privacy_policy.ejs
@@ -159,6 +159,10 @@
         By clicking "Accept" or by playing the Game, you confirm that you have
         read, understood, and agree to abide by these Terms of Service.
       </p>
+
+      <div class="my-5">
+        <a href="/">Go back to the homepage</a>
+      </div>
     </div>
     <style>
       p {
