--- a/views/pages/privacy_policy.ejs
+++ b/views/pages/privacy_policy.ejs
@@ -174,11 +174,12 @@
       }
 
       h3 {
-        color: #ffc107;
-        text-shadow: 1px 1px 1px #000000cf;
-        -webkit-text-stroke: 0.1px grey;
-        font-family: cursive;
+        color: teal;
+        font-family: fantasy;
+        letter-spacing: 3px;
+        text-transform: uppercase;
         margin: 20px 0;
+        margin-top: 40px;
       }
     </style>
   </body>
